# CPP_Production

./: CMakeLists.txt  README.md
include/calc/: calculator.h
libsrc/calc/: CMakeLists.txt
libsrc/calc/src/: calculator.cpp
projects/calculator/: CMakeLists.txt
projects/calculator/src/: main_calc.cpp
testsuite/integration_calc/: integration_calc.py
testsuite/libsrc/calc/: CMakeLists.txt
testsuite/libsrc/calc/src/: tests.cpp
